@@ -1,5 +1,5 @@
 // Thanks http://stackoverflow.com/questions/1567327/using-jquery-to-get-elements-position-relative-to-viewport!
-module.exports = function getPageScroll(win) {
+module.exports = function getWindowScroll(win) {
 	var win = win || window,
 		doc = win.document,
 		docEl = doc.documentElement,
